...
                  defaultIconColor: defaultIconColor,
                  defaultTextColor: defaultTextColor,
                ),
                _buildMenuItem(
                  context: context,
                  icon: Icons.inventory_2_outlined,
                  title: 'Inventário',
                  index: 1, 
                  onTap: () {
                    Navigator.pop(context);
                    if (selectedIndex == 1) return;
                    Navigator.pushReplacement(
                      context,
...
                  defaultIconColor: defaultIconColor,
                  defaultTextColor: defaultTextColor,
                ),
                _buildMenuItem(
                  context: context,
                  icon: Icons.bar_chart_outlined,
                  title: 'Relatórios',
                  index: 3, 
                  onTap: () {
                    Navigator.pop(context);
                    if (selectedIndex == 3) return;
                    Navigator.pushReplacement(
                      context,
...
                  if (userProvider.isAdmin) {
                    return Column(
                      children: [
                        _buildMenuItem(
                          context: context,
                          icon: Icons.people_outline,
                          title: 'Gestão de Usuários',
                          index: 4,
                          onTap: () {
                            Navigator.pop(context);
                            if (selectedIndex == 4) return;
                            Navigator.pushReplacement(
                              context,
...
